MB-41916: Make engineFileDescriptors atomic

This should fix a data race when we create a new bucket and set the
field.

Change-Id: I3b0d6bff7f86876e052aff1c6288c2160f6ffc60
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/137779
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>